Added an image with alt text to the HTML page - 10/21/2024

--- a/src/Lesson_2/vegetables.html
+++ b/src/Lesson_2/vegetables.html
@@ -5,6 +5,6 @@
     </head>
     <body>
 
-     <!--   <p>This is a pragraph, and <a href="vegetables.html">this is a link!</a></p>-->
+       <p>This is a pragraph, and <a href="vegetables2.html">this is a link!</a></p>
     </body>
 </html>
