--- a/src/Lesson_2/images.html
+++ b/src/Lesson_2/images.html
@@ -8,7 +8,14 @@
 
     <p>Hey everyone, check this awesome image out:</p>
 
-    <img src="images/images.jpeg" alt="A bunch of dusty carrots" height="170" width="297">
-    
+    <img src="images/carrots.jpg" alt="A bunch of dusty carrots" height="375" width="500">
+
+    <p>Check this kale out:</p>
+
+    <img src="images/kale.jpg" alt="a bowl of steamed kale" height="239" width="320">
+
+    <img src="images/potato.jpg" alt="a bowl of raw patatos" height="480" width="640">
+
+
     </body>
 </html>
